tdf#163375 sc: fix sumproduct crash bacause of non exists token

pair at formula editing.

Check if both formula token truly exists.

Regression commit: ba0ec4a5d2b025b675410cd18890d1cca3bc5a2f
(tdf#159687 sc formula SUMPRODUCT performance fix: add more binary)

Change-Id: I72d054313f1e9db74aa004dcd8b2012be95c18dc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174862
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit bdbc89b6da2ef4797e496aa0db84069b838b2e73)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174785
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>